--- a/sentilexo-storm-twitter/pom.xml
+++ b/sentilexo-storm-twitter/pom.xml
@@ -11,114 +11,182 @@
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
   
-  <dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.raythos.sentilexo.files.twitter.LoadRawJSON</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>    
+    </build>
+    <dependencies>
    
-  <dependency>
-       <groupId>edu.stanford.nlp</groupId>
-       <artifactId>stanford-corenlp</artifactId>
-       <version>3.3.0</version>
-   </dependency>
+        <dependency>
+            <groupId>edu.stanford.nlp</groupId>
+            <artifactId>stanford-corenlp</artifactId>
+            <version>3.3.0</version>
+        </dependency>
         
         <dependency>
             <groupId>org.twitter4j</groupId>
             <artifactId>twitter4j-core</artifactId>
             <version>4.0.2</version>
             <type>jar</type>
-        </dependency>   
+        </dependency>
         
-<dependency>
-       <groupId>org.apache.storm</groupId>
-       <artifactId>storm-core</artifactId>
-       <version>0.9.2-incubating</version>
-       <!--scope>provided</scope-->
-         <exclusions>
-              <exclusion>
-                   <artifactId>netty</artifactId>
-                   <groupId>org.jboss.netty</groupId>
-              </exclusion>
-            <exclusion>
-               <groupId>org.slf4j</groupId>
-               <artifactId>log4j-over-slf4j</artifactId>
-            </exclusion>
-            <exclusion>
-               <groupId>ch.qos.logback</groupId>
-               <artifactId>logback-classic</artifactId>
-            </exclusion>
-         </exclusions>
-    </dependency>
+        <dependency>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>storm-core</artifactId>
+            <version>0.9.2-incubating</version>
+            <!--scope>provided</scope-->
+            <exclusions>
+                <exclusion>
+                    <artifactId>netty</artifactId>
+                    <groupId>org.jboss.netty</groupId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>log4j-over-slf4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>ch.qos.logback</groupId>
+                    <artifactId>logback-classic</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         
-<dependency>
-        <groupId>org.apache.kafka</groupId>
-        <artifactId>kafka_2.10</artifactId>
-        <version>0.8.1.1</version>
-        <!-- scope>compile</scope -->
-        <exclusions>
-            <exclusion>
-                <artifactId>jmxri</artifactId>
-                <groupId>com.sun.jmx</groupId>
-            </exclusion>
-            <exclusion>
-                <artifactId>jms</artifactId>
-                <groupId>javax.jms</groupId>
-            </exclusion>
-            <exclusion>
-                <artifactId>jmxtools</artifactId>
-                <groupId>com.sun.jdmk</groupId>
-        </exclusion>
-        </exclusions>
-    </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.10</artifactId>
+            <version>0.8.1.1</version>
+            <!-- scope>compile</scope -->
+            <exclusions>
+                <exclusion>
+                    <artifactId>jmxri</artifactId>
+                    <groupId>com.sun.jmx</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jms</artifactId>
+                    <groupId>javax.jms</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jmxtools</artifactId>
+                    <groupId>com.sun.jdmk</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     
-       <dependency>
-	<groupId>org.apache.storm</groupId>
-	<artifactId>storm-kafka</artifactId>
-	<version>0.9.2-incubating</version>
-          <type>jar</type>
-       </dependency>
+        <dependency>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>storm-kafka</artifactId>
+            <version>0.9.2-incubating</version>
+            <type>jar</type>
+        </dependency>
 
     
        
-    <dependency>
-           <groupId>org.apache.zookeeper</groupId>
-  <artifactId>zookeeper</artifactId>
-  <version>3.4.0</version>
-   <exclusions>
-            <exclusion>
-                <artifactId>jmxri</artifactId>
-                <groupId>com.sun.jmx</groupId>
-            </exclusion>
-            <exclusion>
-                <artifactId>jms</artifactId>
-                <groupId>javax.jms</groupId>
-            </exclusion>
-            <exclusion>
-                <artifactId>jmxtools</artifactId>
-                <groupId>com.sun.jdmk</groupId>
-        </exclusion>
-    <exclusion>
-     <groupId>org.slf4j</groupId>
-     <artifactId>slf4j-log4j12</artifactId>
-    </exclusion>
-   </exclusions>
-</dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.0</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jmxri</artifactId>
+                    <groupId>com.sun.jmx</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jms</artifactId>
+                    <groupId>javax.jms</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jmxtools</artifactId>
+                    <groupId>com.sun.jdmk</groupId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.jboss.netty</groupId>
+                    <artifactId>netty</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
 
 
-<!-- dependency>
-    <groupId>org.slf4j</groupId>
-  <artifactId>slf4j-log4j12</artifactId>
-  <version>1.5.8</version>
-</dependency --> 
+        <!-- dependency>
+            <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-log4j12</artifactId>
+          <version>1.5.8</version>
+        </dependency --> 
        
-     <dependency>
-	<groupId>com.google.guava</groupId>
-	<artifactId>guava</artifactId>
-	<version>17.0</version>
-          </dependency>
-      <dependency>
-         <groupId>com.raythos.sentilexo</groupId>
-         <artifactId>sentilexo-common-twitter</artifactId>
-         <version>1.0-SNAPSHOT</version>
-      </dependency>
-   </dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>17.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.raythos.sentilexo</groupId>
+            <artifactId>sentilexo-common-twitter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.raythos.messaging</groupId>
+            <artifactId>sentilexo-twitter-dataServices</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
+            <type>jar</type>
+        </dependency>
+    
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.n3twork.storm</groupId>
+            <artifactId>trident-redis</artifactId>
+            <version>20141005</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>storm</groupId>
+                    <artifactId>storm</artifactId>
+                </exclusion>
+            </exclusions>
 
-   <name>sentilexo-storm-twitter</name>
+        </dependency>
+
+    
+    </dependencies>
+
+    <name>sentilexo-storm-twitter</name>
 </project>
