--- a/sentilexo-storm-twitter/pom.xml
+++ b/sentilexo-storm-twitter/pom.xml
@@ -39,11 +39,12 @@
     </build>
     <dependencies>
    
-        <dependency>
-            <groupId>edu.stanford.nlp</groupId>
-            <artifactId>stanford-corenlp</artifactId>
-            <version>3.3.0</version>
-        </dependency>
+      <dependency>
+    <groupId>edu.stanford.nlp</groupId>
+    <artifactId>stanford-corenlp</artifactId>
+    <version>3.3.0</version>
+         <type>jar</type>
+      </dependency>
         
         <dependency>
             <groupId>org.twitter4j</groupId>
@@ -184,8 +185,12 @@
             </exclusions>
 
         </dependency>
-
-    
+        <dependency>
+            <groupId>com.raythos.storm</groupId>
+            <artifactId>sentilexo-storm-twitter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <name>sentilexo-storm-twitter</name>
