Added configurable location for bayes pmml files - code for model lookups from db crashing after multi-tennat refactoring and so for now this one model per file will do. High Availability / Now downtime still attainable with new models as the initial trident function ensures that there will be no calculation duplications. new models have to consult the query_indices cql table to avoid duplications/

--- a/sentilexo-common-twitter/src/main/resources/sentilexo.properties.template.properties
+++ b/sentilexo-common-twitter/src/main/resources/sentilexo.properties.template.properties
@@ -17,3 +17,4 @@ zkhosts=localhost:2181
 request.required.acks=1
 cqlhost=localhost
 cqlschema=twitterqueries
+bayes=/etc/raythos/models/twitter-sentiment-bayes.xml
