--- a/sentilexo-storm-twitter/pom.xml
+++ b/sentilexo-storm-twitter/pom.xml
@@ -10,7 +10,13 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
-  
+  <repositories>
+    <repository>
+        <id>clojars.org</id>
+        <url>http://clojars.org/repo</url>
+    </repository>
+</repositories>
+
     <build>
         <plugins>
             <plugin>
@@ -191,7 +197,19 @@
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
-    </dependencies>
-
+   
+    <dependency>
+        <groupId>com.github.quintona</groupId>
+        <artifactId>storm-pattern</artifactId>
+        <version>0.0.2-SNAPSHOT</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>com.github.quintona</groupId>
+        <artifactId>storm-r</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+    
+ </dependencies>
     <name>sentilexo-storm-twitter</name>
 </project>
