--- a/sentilexo-storm-twitter/pom.xml
+++ b/sentilexo-storm-twitter/pom.xml
@@ -10,12 +10,12 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
-  <repositories>
+  <!--repositories>
     <repository>
         <id>clojars.org</id>
         <url>http://clojars.org/repo</url>
     </repository>
-</repositories>
+</repositories -->
 
     <build>
         <plugins>
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>org.apache.storm</groupId>
             <artifactId>storm-core</artifactId>
-            <version>0.9.2-incubating</version>
+            <version>0.9.3</version>
             <!--scope>provided</scope-->
             <exclusions>
                 <exclusion>
@@ -198,17 +198,18 @@
             <type>jar</type>
         </dependency>
    
+       
     <dependency>
-        <groupId>com.github.quintona</groupId>
-        <artifactId>storm-pattern</artifactId>
-        <version>0.0.2-SNAPSHOT</version>
-    </dependency>
-    
-    <dependency>
+<groupId>org.jpmml</groupId>
+<artifactId>pmml-runtime</artifactId>
+<version>1.1.13</version>
+</dependency>
+
+    <!--dependency>
         <groupId>com.github.quintona</groupId>
         <artifactId>storm-r</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-    </dependency>
+    </dependency-->
     
  </dependencies>
     <name>sentilexo-storm-twitter</name>
