Top level POM project

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ Thumbs.db
 /sentilexo-twitter-dataServices/target/
 /sentilexo-storm-twitter/target/
 /sentilexo-twitter-dataServices/data/senti2G.json
+/cql/
