--- a/sentilexo-common-twitter/pom.xml
+++ b/sentilexo-common-twitter/pom.xml
@@ -1,47 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-        <groupId>com.raythos.sentilexo</groupId>
-        <artifactId>sentilexo-common-twitter</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <packaging>jar</packaging>
+    <groupId>com.raythos.sentilexo</groupId>
+    <artifactId>sentilexo-common-twitter</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <properties>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
     
     
-      <build>
-   <plugins>    
-     <plugin>
-        <groupId>org.apache.avro</groupId>
-         <artifactId>avro-maven-plugin</artifactId>
-        <version>1.7.7</version>
-        <configuration>
-        </configuration>
-        <executions>
-        <execution>
-       <phase>generate-sources</phase>
-        <goals>
-            <goal>schema</goal>
-            </goals>
-            <configuration>
-               <stringType>String</stringType>
+    <build>
+        <plugins>    
+            <plugin>
+                <groupId>org.apache.avro</groupId>
+                <artifactId>avro-maven-plugin</artifactId>
+                <version>1.7.7</version>
+                <configuration>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>schema</goal>
+                        </goals>
+                        <configuration>
+                            <stringType>String</stringType>
+                            <sourceDirectory>src/main/avro</sourceDirectory>
+                            <outputDirectory>target/generated-sources/avro/</outputDirectory>
+                          </configuration>
   
-                <sourceDirectory>src/main/avro</sourceDirectory>
-            <outputDirectory>target/generated-sources/avro/</outputDirectory>
-  
-            </configuration>
-  
-            </execution>
-            </executions>
-      </plugin> </plugins>   
+                    </execution>
+                </executions>
+            </plugin> 
+        </plugins>   
     </build>
     
     <dependencies> 
    
-     <dependency>
-        <groupId>org.twitter4j</groupId>
+        <dependency>
+            <groupId>org.twitter4j</groupId>
             <artifactId>twitter4j-core</artifactId>
             <version>4.0.2</version>
             <type>jar</type>
@@ -52,18 +51,20 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.7</version>
-       </dependency>
+        </dependency>
        
-       <dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.7</version>
         </dependency>
+        
         <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
             <version>1.7.7</version>
         </dependency>
+        
         <dependency>
             <groupId>com.datastax.cassandra</groupId>
             <artifactId>cassandra-driver-core</artifactId>
