Temporarily excluded DbUtils

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <module>sentilexo-storm-twitter</module>
         <module>sentilexo-twitter-dataServices</module>
         <module>storm-common</module>
-        <module>DbUtils</module>
+        <!-- module>DbUtils</module -->
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
