Fixed build order

--- a/sentilexo-twitter-dataServices/pom.xml
+++ b/sentilexo-twitter-dataServices/pom.xml
@@ -3,7 +3,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.raythos.ingress</groupId>
+    <groupId>com.raythos.sentilexo</groupId>
     <artifactId>sentilexo-twitter-dataServices</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
