--- a/storm-common/pom.xml
+++ b/storm-common/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent-->
-       <groupId>com.raythos</groupId>
+       <groupId>com.raythos.sentilexo</groupId>
         <version>1.0-SNAPSHOT</version>
     <artifactId>storm-common</artifactId>
     <packaging>jar</packaging>
