Fixed build order

--- a/sentilexo-common-twitter/src/main/resources/sentilexo.properties.template.properties
+++ b/sentilexo-common-twitter/src/main/resources/sentilexo.properties.template.properties
@@ -19,3 +19,5 @@ request.required.acks=1
 cqlhost=localhost
 cqlschema=twitterqueries
 bayes=/etc/raythos/models/twitter-sentiment-bayes.xml
+file.dir.results=~/sentidata
+file.ext.results=.json
