--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>sentilexo-storm-twitter</module>
 
         <!-- module>DbUtils</module -->
+        <module>sentilexo-twitter-dbimports</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
