--- a/sentilexo-twitter-dbimports/pom.xml
+++ b/sentilexo-twitter-dbimports/pom.xml
@@ -59,7 +59,7 @@
             <type>jar</type>
         </dependency>
         <dependency>
-            <groupId>com.raythos.messaging</groupId>
+            <groupId>com.raythos.sentilexo</groupId>
             <artifactId>sentilexo-twitter-dataServices</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
