--- a/sentilexo-common-twitter/pom.xml
+++ b/sentilexo-common-twitter/pom.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.raythos.sentilexo</groupId>
-    <artifactId>sentilexo-common-twitter</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    
+    <parent>
+        <groupId>com.raythos.sentilexo</groupId>
+        <artifactId>sentilexo-project</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    
+    <!-- groupId>com.raythos.sentilexo</groupId>
+    <version>1.0-SNAPSHOT</version -->
+    <artifactId>common-twitter</artifactId>
     <packaging>jar</packaging>
+   
     <properties>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
@@ -80,12 +88,12 @@
         
         
         <dependency>
-    <groupId>org.codehaus.jackson</groupId>
-    <artifactId>jackson-mapper-asl</artifactId>
-    <version>1.9.13</version>
-</dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
 
-<!-- JSON serialization -->
+        <!-- JSON serialization -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -108,31 +116,31 @@
         </dependency>
       
         <dependency>
-	<groupId>net.jpountz.lz4</groupId>
-	<artifactId>lz4</artifactId>
-	<version>1.2.0</version>
-      </dependency>
+            <groupId>net.jpountz.lz4</groupId>
+            <artifactId>lz4</artifactId>
+            <version>1.2.0</version>
+        </dependency>
 
-      <dependency>
-        <groupId>org.apache.kafka</groupId>
-        <artifactId>kafka_2.10</artifactId>
-        <version>0.8.1.1</version>
-        <scope>compile</scope>
-        <exclusions>
-            <exclusion>
-                <artifactId>jmxri</artifactId>
-                <groupId>com.sun.jmx</groupId>
-            </exclusion>
-            <exclusion>
-                <artifactId>jms</artifactId>
-                <groupId>javax.jms</groupId>
-            </exclusion>
-            <exclusion>
-                <artifactId>jmxtools</artifactId>
-                <groupId>com.sun.jdmk</groupId>
-        </exclusion>
-        </exclusions>
-    </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.10</artifactId>
+            <version>0.8.1.1</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jmxri</artifactId>
+                    <groupId>com.sun.jmx</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jms</artifactId>
+                    <groupId>javax.jms</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jmxtools</artifactId>
+                    <groupId>com.sun.jdmk</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
    
         <dependency>
             <groupId>com.datastax.cassandra</groupId>
@@ -163,5 +171,5 @@
   
   
        
-    <name>sentilexo-common-twitter</name>
+    <name>common-twitter</name>
 </project>
