--- a/sentilexo-twitter-dataServices/pom.xml
+++ b/sentilexo-twitter-dataServices/pom.xml
@@ -3,9 +3,17 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.raythos.sentilexo</groupId>
-    <artifactId>sentilexo-twitter-dataServices</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <parent>
+        <groupId>com.raythos.sentilexo</groupId>
+        <artifactId>sentilexo-project</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+    <!-- groupId>com.raythos.sentilexo</groupId>
+    <version>1.0-SNAPSHOT</version -->
+
+
+    <artifactId>ingress-twitter</artifactId>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -14,24 +22,24 @@
    
     </properties>
     <repositories>
-		<repository>
-			<id>github-releases</id>
-			<url>http://oss.sonatype.org/content/repositories/github-releases/</url>
-		</repository>
-		<repository>
-			<id>clojars.org</id>
-			<url>http://clojars.org/repo</url>
-		</repository>
-		<repository>
-			<id>twitter4j</id>
-			<url>http://twitter4j.org/maven2</url>
-		</repository>
-	</repositories>
+        <repository>
+            <id>github-releases</id>
+            <url>http://oss.sonatype.org/content/repositories/github-releases/</url>
+        </repository>
+        <repository>
+            <id>clojars.org</id>
+            <url>http://clojars.org/repo</url>
+        </repository>
+        <repository>
+            <id>twitter4j</id>
+            <url>http://twitter4j.org/maven2</url>
+        </repository>
+    </repositories>
     
         
-        <build>
-            <plugins>    
-                 <!-- plugin>
+    <build>
+        <plugins>    
+            <!-- plugin>
                     <groupId>org.apache.avro</groupId>
                     <artifactId>avro-maven-plugin</artifactId>
                     <version>1.7.1</version>
@@ -51,37 +59,37 @@
                 </executions>
             </plugin -->   
          
-        <plugin>
-            <artifactId>maven-assembly-plugin</artifactId>
-            <configuration>
-              <descriptorRefs>
-                <descriptorRef>jar-with-dependencies</descriptorRef>
-              </descriptorRefs>
-              <archive>
-                <manifest>
-                  <mainClass>com.raythos.sentilexo.files.twitter.LoadRawJSON</mainClass>
-                </manifest>
-              </archive>
-            </configuration>
-            <executions>
-              <execution>
-                <id>make-assembly</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>single</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-    </plugins>    
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.raythos.sentilexo.files.twitter.LoadRawJSON</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>    
     </build>
     <dependencies> 
            
-      <dependency>
-        <groupId>com.twitter</groupId>
-        <artifactId>hbc-twitter4j</artifactId> <!-- or  hbc-core  -->
-        <version>2.2.0</version> <!-- or whatever the latest version is -->
-       </dependency>       
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>hbc-twitter4j</artifactId> <!-- or  hbc-core  -->
+            <version>2.2.0</version> <!-- or whatever the latest version is -->
+        </dependency>       
            
            
            
@@ -93,34 +101,34 @@
         </dependency>
        
            
-         <dependency>
-	     <groupId>com.google.guava</groupId>
-	      <artifactId>guava</artifactId>
-	     <version>17.0</version>
-         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>17.0</version>
+        </dependency>
 
         <dependency>
-	<groupId>org.slf4j</groupId>
-	<artifactId>slf4j-api</artifactId>
-	<version>1.7.7</version>
-       </dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.7</version>
+        </dependency>
        
-       <dependency>
-	<groupId>org.slf4j</groupId>
-	<artifactId>slf4j-log4j12</artifactId>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
         
-	<version>1.7.7</version>
-    </dependency>
-               <dependency>
-                    <groupId>org.apache.avro</groupId>
-                    <artifactId>avro</artifactId>
-                <version>1.7.2</version>
+            <version>1.7.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>1.7.2</version>
         </dependency>
         <dependency>
             <groupId>com.raythos.sentilexo</groupId>
-            <artifactId>sentilexo-common-twitter</artifactId>
+            <artifactId>common-twitter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-    <name>sentilexo-twitter-dataServices</name>
+    <name>ingress-twitter</name>
 </project>
