--- a/sentilexo-twitter-dbimports/pom.xml
+++ b/sentilexo-twitter-dbimports/pom.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.raythos.sentilexo</groupId>
-    <artifactId>sentilexo-twitter-dbimports</artifactId>
-    <version>1.0-SNAPSHOT</version>
+     <parent>
+        <groupId>com.raythos.sentilexo</groupId>
+        <artifactId>sentilexo-project</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+    <artifactId>dbimports-twitter</artifactId>
+    
+    <!--groupId>com.raythos.sentilexo</groupId>
+    <version>1.0-SNAPSHOT</version!-->
     <packaging>jar</packaging>
     <properties>
         <maven.compiler.source>1.7</maven.compiler.source>
@@ -54,17 +60,17 @@
         </dependency>
         <dependency>
             <groupId>com.raythos.sentilexo</groupId>
-            <artifactId>sentilexo-common-twitter</artifactId>
+            <artifactId>common-twitter</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.raythos.sentilexo</groupId>
-            <artifactId>sentilexo-twitter-dataServices</artifactId>
+            <artifactId>ingress-twitter</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
     </dependencies>    
-    
+    <name>dbimports-twitter</name>
     
 </project>
